# opensvf

./: .firebaserc  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  REQUIREMENTS.md  conftest.py  issues.json  obsw_sim  obsw_sim_aarch64  pyproject.toml  setup_issues.py
.github/workflows/: ci.yml  create-issues.yml
.idx/: dev.nix
campaigns/: README.md  eps_validation.yaml  example_campaign.yaml  fdir_campaign.yaml  mil1553_validation.yaml  nominal_ops.yaml  platform_validation.yaml  realtime_detumbling.yaml  safe_mode_recovery.yaml  spacecraft.yaml
campaigns/procedures/: aocs_procedures.py  example_procedures.py  fdir_procedures.py
docs/: abstraction-layer.md  architecture.md  design-philosophy.md  equipment-library.md  plugin.md  sil-attitude-validation-guide.md
examples/: spacecraft.yaml  spacecraft_with_buses.yaml  test_simulation_master.py  validate_dds.py  validate_fmpy.py
mission_mysat1/: spacecraft.yaml  spacecraft_with_buses.yaml
mission_mysat1/campaigns/: aocs_campaign.yaml  contact_pass.yaml  dhs_campaign.yaml  eps_campaign.yaml  eps_validation.yaml  fdir_chain.yaml  mil1553_validation.yaml  platform_campaign.yaml  pus_validation.yaml  realtime_detumbling.yaml  spacecraft.yaml  ttc_campaign.yaml
mission_mysat1/hardware_profiles/: gps_novatel_oem7.yaml  gyro_default.yaml  mag_default.yaml  rw_sinclair_rw003.yaml  thermal_default.yaml  thr_default.yaml  thr_moog_monarc_1.yaml
mission_mysat1/procedures/: aocs_procedures.py  dhs_fdir_procedures.py  eps_procedures.py  example_procedures.py  platform_procedures.py  ttc_pus_procedures.py
mission_mysat1/wiring/: eps_wiring.yaml
models/: BatteryFmu.py  EpsFmu.fmu  PcduFmu.py  SimpleCounter.fmu  SolarArrayFmu.fmu  SpacecraftDynamics.fmu  validate_eps.py
models/fmu/: BatteryFmu.fmu  PcduFmu.fmu
results/: simple_counter_20260321_204310.csv  test_results.xml  traceability.txt
results/mc_bdot/: report.json  report.txt
scripts/: activate.sh  ci_setup_path.py  demo.sh  demo_yamcs.py  download_fmu.sh  mc_bdot_detumbling.py  setup-workspace.sh  start-yamcs.sh  stop-yamcs.sh
src/opensvf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/svf/: abstractions.py  bus.py  campaign_runner.py  can.py  command_store.py  dds_sync.py  equipment.py  equipment_fault.py  fmu_adapter.py  fmu_equipment.py  hardware_profile.py  logging.py  mil1553.py  monte_carlo.py  native_adapter.py  native_equipment.py  parameter_store.py  procedure.py  report.py  simulation.py  software_tick.py  spacecraft.py  spw.py  wiring.py  yamcs_bridge.py
srdb/baseline/: aocs.yaml  dhs.yaml  eps.yaml  obdh.yaml  thermal.yaml  ttc.yaml
srdb/hardware/: gps_default.yaml  mtq_default.yaml  rw_default.yaml
srdb/missions/: example_mission.yaml
srdb/wiring/: bdot_wiring.yaml  full_loop_wiring.yaml  kde_wiring.yaml
tests/: test_fixtures.py  test_obc_emulator_adapter.py  test_observable.py  test_parameter_store.py  test_simulation_master.py  test_srdb_definitions.py  test_srdb_validation.py
tests/equipment/: test_aocs_sensors.py  test_bdot_controller.py  test_bus.py  test_equipment.py  (+8 more)
tools/: check_coverage.py  generate_xtce.py  srdb_consistency_check.py
(+139 files in other folders)
