[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensvf"
version = "0.1.0"
description = "Standards-based validation platform for aerospace software"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "fmpy>=0.3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
