[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensvf"
version = "0.1.0"
description = "Standards-based validation platform for aerospace software"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "fmpy>=0.3.20",
    "requests>=2.31",
    "pythonfmu>=0.6",
    "cyclonedds>=0.11",
    "pyyaml>=6.0",
    "pytest-timeout>=2.3",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
]

[project.scripts]
svf = "svf.campaign.cli:main"

# pytest11 entry point removed — plugin loaded via conftest.py

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
exclude = ["examples/", "setup_issues.py"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["fmpy", "fmpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["obsw_srdb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
timeout = 30
log_cli = false
log_cli_level = "INFO"
log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_date_format = "%H:%M:%S"
python_classes = ["*Suite", "*Tests"]
testpaths = ["tests"]
norecursedirs = ["tests/hardware"]
